--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/alexsmaldone/TypeScript-API/issues"
   },
-  "homepage": "https://github.com/alexsmaldone/TypeScript-API#readme"
+  "homepage": "https://github.com/alexsmaldone/TypeScript-API#readme",
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "express": "^4.18.1"
+  }
 }
