--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/sqlite3": "^3.1.8",
+    "express": "^4.18.1",
+    "sequelize": "^6.21.2",
+    "sqlite3": "^5.0.8"
   }
 }
