--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/alexsmaldone/TypeScript-API#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
@@ -28,6 +29,7 @@
     "@types/sqlite3": "^3.1.8",
     "express": "^4.18.1",
     "sequelize": "^6.21.2",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "uuid": "^8.3.2"
   }
 }
