--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.8",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "sequelize": "^6.21.2",
     "sqlite3": "^5.0.8",
     "uuid": "^8.3.2"
